namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-zj
  labels:
    name: dev-zj
