logmanage-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: namespace-name
  name: logmanage-service
  labels:
    app: logmanage-service
spec:
  selector:
    app: logmanage
  ports:
    - protocol: TCP
      port: 8098
      targetPort: 8098
