org-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: namespace-name
  name: org-service
  labels:
    app: org-service
spec:
  selector:
    app: org
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
