portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: namespace-name
  name: portal-service
  labels:
    app: portal-service
spec:
  selector:
    app: portal
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
