security-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev-zj
  name: security-service
  labels:
    app: security-service
spec:
  selector:
    app: security
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
